--- a/bookingservice.properties
+++ b/bookingservice.properties
@@ -1,15 +1,11 @@
 spring.application.name=bookingservice
-spring.data.mongodb.uri=mongodb://localhost:27017/bookingmicroservice
+spring.data.mongodb.uri=mongodb://mongodb:27017/bookingmicroservice
 server.port=8081
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-
-spring.kafka.bootstrap-servers=localhost:9092
+eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka/
+spring.kafka.bootstrap-servers=kafka:29092
 spring.kafka.consumer.group-id=email-group
-
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
