--- a/flightservice.properties
+++ b/flightservice.properties
@@ -1,3 +1,3 @@
 spring.application.name=flightservice
-spring.data.mongodb.uri=mongodb://localhost:27017/flightmicroservice
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.data.mongodb.uri=mongodb://mongodb:27017/flightmicroservice
+eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka/
