--- a/bookingservice.properties
+++ b/bookingservice.properties
@@ -1,6 +1,6 @@
 spring.application.name=bookingservice
-spring.data.mongodb.uri=mongodb://mongodb:27017/bookingmicroservice
-eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka/
+spring.data.mongodb.uri=mongodb://localhost:27017/bookingmicroservice
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.kafka.bootstrap-servers=kafka:29092
 spring.kafka.consumer.group-id=email-group
 spring.kafka.consumer.auto-offset-reset=earliest
